--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1196,3 +1196,16 @@ a:hover {
         border-top: 1px solid var(--input-border);
     }
 }
+
+/* Fix for URL color in user messages */
+.user-message .message-content a {
+    color: rgba(255, 255, 255, 0.9);
+    text-decoration: underline;
+    text-underline-offset: 2px;
+    font-weight: 500;
+}
+
+.user-message .message-content a:hover {
+    color: white;
+    text-decoration: underline;
+}
